Connect public PWA to report processing queue
